[ROAD TO 99] lighthouse

--- a/src/app/modules/problems/pages/problems/sections/section-topics/section-topics.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-topics/section-topics.component.html
@@ -8,74 +8,99 @@
   <div class="card-body">
     <swiper [config]="swiperConfig">
       <div class="swiper-slide">
-        <a
-          container="body"
-          ngbTooltip="{{ 'Best' | translate }}"
-          [@fadeInRightOnEnter]
+        <div
           (click)="click(1)"
+          [@fadeInRightOnEnter]
+          [ngClass]="{'active': activeTopic == 1}"
           class="topic"
-          [ngClass]="{'active': activeTopic == 1}">
+          container="body"
+          ngbTooltip="{{ 'Best' | translate }}">
           <div class="icon">
-            <img src="assets/images/problems/topics/topic-best.png" alt="topic-best">
+            <img alt="topic-best" loading="lazy" src="assets/images/problems/topics/topic-best.png">
           </div>
-        </a>
+        </div>
+      </div>
+
+      <div class="swiper-slide">
+        <div
+          (click)="click(2)"
+          [@fadeInRightOnEnter]
+          [ngClass]="{'active': activeTopic == 2}"
+          class="topic"
+          container="body"
+          ngbTooltip="{{ 'Coding' | translate }}">
+          <div class="icon">
+            <img alt="topic-coding" loading="lazy" src="assets/images/problems/topics/topic-coding.png">
+          </div>
+        </div>
+      </div>
+
+      <div class="swiper-slide">
+        <div
+          (click)="click(3)"
+          [@fadeInRightOnEnter]
+          [ngClass]="{'active': activeTopic == 3}"
+          class="topic"
+          container="body"
+          ngbTooltip="{{ 'Python Tricks' | translate }}">
+          <div class="icon">
+            <img alt="topic-python-tricks" loading="lazy" src="assets/images/problems/topics/topic-python-tricks.png">
+          </div>
+        </div>
+      </div>
+
+      <div class="swiper-slide">
+        <div
+          (click)="click(4)"
+          [@fadeInRightOnEnter]
+          [ngClass]="{'active': activeTopic == 4}"
+          class="topic"
+          container="body"
+          ngbTooltip="{{ 'Bash' | translate }}">
+          <div class="icon">
+            <img alt="topic-bash" loading="lazy" src="assets/images/problems/topics/topic-bash.png">
+          </div>
+        </div>
+      </div>
+
+      <div class="swiper-slide">
+        <div
+          (click)="click(5)"
+          [@fadeInRightOnEnter]
+          [ngClass]="{'active': activeTopic == 5}"
+          class="topic"
+          container="body"
+          ngbTooltip="{{ 'Database' | translate }}">
+          <div class="icon">
+            <img alt="topic-database" loading="lazy" src="assets/images/problems/topics/topic-database.png">
+          </div>
+        </div>
+      </div>
+
+      <div class="swiper-slide">
+        <div
+          (click)="click(6)"
+          [@fadeInRightOnEnter]
+          [ngClass]="{'active': activeTopic == 6}"
+          class="topic"
+          container="body"
+          ngbTooltip="{{ 'Math' | translate }}">
+          <div class="icon">
+            <img alt="topic-math" loading="lazy" src="assets/images/problems/topics/topic-math.png">
+          </div>
+        </div>
       </div>
 
       <div class="swiper-slide">
         <a
-          container="body"
-          ngbTooltip="{{ 'Coding' | translate }}"
+          (click)="click(7)"
           [@fadeInRightOnEnter]
-          (click)="click(2)"
+          [ngClass]="{'active': activeTopic == 7}"
           class="topic"
-          [ngClass]="{'active': activeTopic == 2}">
+          container="body"
+          ngbTooltip="{{ 'IQ' | translate }}">
           <div class="icon">
-            <img src="assets/images/problems/topics/topic-coding.png">
-          </div>
-        </a>
-      </div>
-
-      <div class="swiper-slide">
-        <a container="body" ngbTooltip="{{ 'Python Tricks' | translate }}" [@fadeInRightOnEnter]
-           (click)="click(3)" class="topic" [ngClass]="{'active': activeTopic == 3}">
-          <div class="icon">
-            <img src="assets/images/problems/topics/topic-python-tricks.png">
-          </div>
-        </a>
-      </div>
-
-      <div class="swiper-slide">
-        <a container="body" ngbTooltip="{{ 'Bash' | translate }}" [@fadeInRightOnEnter]
-           (click)="click(4)" class="topic" [ngClass]="{'active': activeTopic == 4}">
-          <div class="icon">
-            <img src="assets/images/problems/topics/topic-bash.png">
-          </div>
-        </a>
-      </div>
-
-      <div class="swiper-slide">
-        <a container="body" ngbTooltip="{{ 'Database' | translate }}" [@fadeInRightOnEnter]
-           (click)="click(5)" class="topic" [ngClass]="{'active': activeTopic == 5}">
-          <div class="icon">
-            <img src="assets/images/problems/topics/topic-database.png">
-          </div>
-        </a>
-      </div>
-
-      <div class="swiper-slide">
-        <a container="body" ngbTooltip="{{ 'Math' | translate }}" [@fadeInRightOnEnter]
-           (click)="click(6)" class="topic" [ngClass]="{'active': activeTopic == 6}">
-          <div class="icon">
-            <img src="assets/images/problems/topics/topic-math.png">
-          </div>
-        </a>
-      </div>
-
-      <div class="swiper-slide">
-        <a container="body" ngbTooltip="{{ 'IQ' | translate }}" [@fadeInRightOnEnter]
-           (click)="click(7)" class="topic" [ngClass]="{'active': activeTopic == 7}">
-          <div class="icon">
-            <img src="assets/images/problems/topics/topic-iq.png">
+            <img alt="topic-iq" loading="lazy" src="assets/images/problems/topics/topic-iq.png">
           </div>
         </a>
       </div>
