--- a/src/app/layout/components/menu/vertical-menu/vertical-menu.component.html
+++ b/src/app/layout/components/menu/vertical-menu/vertical-menu.component.html
@@ -5,7 +5,7 @@
       <!-- App Branding -->
       <a class="navbar-brand" [routerLink]="['/']">
         <span class="brand-logo">
-          <img style="max-width: 180px !important;" src="assets/images/logo/logo.png" alt="brand-logo" width="36" />
+          <img src="assets/images/logo/logo.png" alt="brand-logo" width="36" height="24" />
         </span>
         <h2 class="brand-text mb-0">{{ coreConfig.app.appTitle }}</h2>
       </a>
@@ -32,7 +32,7 @@
 
 <!-- Main menu -->
 <ng-scrollbar [visibility]="'hover'" autoHeightDisabled="false">
-  <div class="main-menu-content" (scroll)="onSidebarScroll()">
+  <div class="main-menu-content">
     <ul class="navigation navigation-main" layout="vertical" core-menu></ul>
   </div>
 </ng-scrollbar>
