--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -23,27 +23,27 @@
         </a>
       </li>
       <li class="nav-item d-lg-none d-md-block d-sm-block">
-        <a type="button" class="nav-link nav-link-style btn" (click)="toggleDarkSkin()">
+        <button type="button" class="nav-link nav-link-style btn" (click)="toggleDarkSkin()">
           @if (currentSkin == 'dark'){
             <kep-icon name="sun" type="duotone" class="font-large-1"></kep-icon>
           } @else {
             <kep-icon name="moon" type="duotone" class="font-large-1"></kep-icon>
           }
-        </a>
+        </button>
       </li>  
     </ul>
     <!--/ Menu Toggler -->
 
     <!-- Toggle skin -->
-    <li class="nav-item d-none d-lg-block">
-      <a type="button" class="nav-link nav-link-style btn" (click)="toggleDarkSkin()">
+    <div class="nav-item d-none d-lg-block">
+      <button type="button" class="nav-link nav-link-style btn" (click)="toggleDarkSkin()">
         @if (currentSkin == 'dark'){
           <kep-icon name="sun" type="duotone" class="font-large-1"></kep-icon>
         } @else {
           <kep-icon name="moon" type="duotone" class="font-large-1"></kep-icon>
         }
-      </a>
-    </li>
+      </button>
+    </div>
     <!--/ Toggle skin -->
   </div>
   <ul class="nav navbar-nav align-items-center ml-auto">
@@ -52,19 +52,19 @@
         <i class="fi fi-{{ languageOptions[_translateService.currentLang].flag }}"></i>
 <!--        <span class="ml-50 selected-language">{{ languageOptions[_translateService.currentLang].title }}</span>-->
       </a>
-      <div ngbDropdownMenu aria-labelledby="dropdown-flag">
+      <div ngbDropdownMenu>
         <a *ngFor="let lang of _translateService.getLangs()" ngbDropdownItem (click)="setLanguage(lang)">
           <i class="fi fi-{{ languageOptions[lang].flag }}"></i> {{ languageOptions[lang].title }}
         </a>
       </div>
     </li>
 
-    <div *ngIf="!isAuthenticated">
+    <li *ngIf="!isAuthenticated">
       <a (click)="loginModalOpenForm()" class="btn" rippleEffect>
         <i data-feather="log-in"></i>
         {{ 'LOGIN' | translate }}
       </a>
-    </div>
+    </li>
 
     @defer {
       <app-navbar-daily-tasks *ngIf="isAuthenticated"></app-navbar-daily-tasks>
