--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -3,13 +3,13 @@
        class="avatar avatar-lg badge-glow bg-primary p-50 m-0 mb-1">
     <a class="text-white">
       <div class="avatar-content">
-        <kep-icon class="font-medium-4" type="solid" name="problem"></kep-icon>
+        <kep-icon class="font-medium-5" name="problem"></kep-icon>
       </div>
     </a>
   </div>
 
   <h2 [@fadeInUpOnEnter] class="mt-1 text-white">{{ 'Problems' | translate }}</h2>
-  <h5 [@fadeInUpOnEnter] class="mt-2 text-white">{{ 'ProblemsPageTitleText' | translate }}</h5>
+  <div [@fadeInUpOnEnter] class="mt-2 text-white">{{ 'ProblemsPageTitleText' | translate }}</div>
 
   <div [@fadeInUpOnEnter] class="mt-2">
     <a routerLink="rating" class="btn btn-primary mr-md-1 mr-25">
