--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -1,11 +1,11 @@
 <div class="text-center">
   <div [@fadeInUpOnEnter]
        class="avatar avatar-lg badge-glow bg-primary p-50 m-0 mb-1">
-    <a class="text-white">
+    <div class="text-white">
       <div class="avatar-content">
         <kep-icon class="font-medium-5" name="problem"></kep-icon>
       </div>
-    </a>
+    </div>
   </div>
 
   <h2 [@fadeInUpOnEnter] class="mt-1 text-white">{{ 'Problems' | translate }}</h2>
