--- a/src/app/modules/problems/pages/problems/sections/section-topics/section-topics.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-topics/section-topics.component.html
@@ -92,7 +92,7 @@
       </div>
 
       <div class="swiper-slide">
-        <a
+        <div
           (click)="click(7)"
           [@fadeInRightOnEnter]
           [ngClass]="{'active': activeTopic == 7}"
@@ -102,7 +102,7 @@
           <div class="icon">
             <img alt="topic-iq" loading="lazy" src="assets/images/problems/topics/topic-iq.png">
           </div>
-        </a>
+        </div>
       </div>
     </swiper>
   </div>
