--- a/src/app/modules/problems/pages/problems/sections/section-sidebar/section-sidebar.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-sidebar/section-sidebar.component.html
@@ -147,10 +147,10 @@
       </table>
 
       <div class="card-footer text-center">
-        <a class="btn btn-primary bg-primary badge-glow btn-sm round" routerLink="attempts">
+        <button class="btn btn-primary bg-primary badge-glow btn-sm round" routerLink="attempts">
           {{ 'AllAttempts' | translate }}
           <i data-feather="arrow-right"></i>
-        </a>
+        </button>
       </div>
     </div>
 
