--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -16,7 +16,7 @@
       <kep-icon name="rating"></kep-icon>
       {{ 'Rating' | translate }}
     </a>
-    <a routerLink="profile" class="btn btn-primary mr-md-1 mr-25">
+    <a routerLink="statistics" class="btn btn-primary mr-md-1 mr-25">
       <kep-icon name="statistics"></kep-icon>
       {{ 'Statistics' | translate }}
     </a>
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="info-img">
-            <img src="assets/images/pages/graphic-3.png" alt="info-img">
+            <img loading="lazy" src="assets/images/pages/graphic-3.png" alt="info-img">
           </div>
         </a>
       </div>
@@ -49,7 +49,7 @@
             </div>
           </div>
           <div class="info-img">
-            <img src="assets/images/pages/graphic-2.png" alt="info-img">
+            <img loading="lazy" src="assets/images/pages/graphic-2.png" alt="info-img">
           </div>
         </a>
       </div>
