[ROAD TO 99] lighthouse

--- a/src/app/modules/challenges/pages/challenges/challenges.component.html
+++ b/src/app/modules/challenges/pages/challenges/challenges.component.html
@@ -42,7 +42,7 @@
                     </div>
                   </div>
                   <div class="info-img">
-                    <img src="assets/images/pages/graphic-1.png" alt="info-img">
+                    <img src="assets/images/pages/graphic-1.webp" alt="info-img">
                   </div>
                 </a>
               </div>
@@ -55,7 +55,7 @@
                     </div>
                   </div>
                   <div class="info-img">
-                    <img src="assets/images/pages/graphic-4.png" alt="info-img">
+                    <img src="assets/images/pages/graphic-4.webp" alt="info-img">
                   </div>
                 </a>
               </div>
