--- a/src/app/modules/landing-page/landing-page.component.html
+++ b/src/app/modules/landing-page/landing-page.component.html
@@ -73,7 +73,7 @@
   <div class="row">
     <div class="col-lg-4 col-md-6 col-sm-12">
       <div class="blog-post" [@fadeInLeft]="sectionBlogAnimationState">
-        <img src="assets/images/pages/graphic-1.png" alt="problems">
+        <img src="assets/images/pages/graphic-1.webp" alt="problems">
         <div class="blog-content">
           <h3>
             <a href="#">Masalalar bo'limi haqida</a>
@@ -85,7 +85,7 @@
 
     <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-4">
       <div class="blog-post" [@fadeInUp]="sectionBlogAnimationState">
-        <img src="assets/images/pages/graphic-2.png" alt="contest">
+        <img src="assets/images/pages/graphic-2.webp" alt="contest">
         <div class="blog-content">
           <h3>
             <a href="#">Kontestda qatnashish bo'yicha tavsiyalar</a>
@@ -97,7 +97,7 @@
 
     <div class="col-lg-4 col-md-6 col-sm-12">
       <div class="blog-post" [@fadeInRight]="sectionBlogAnimationState">
-        <img src="assets/images/pages/graphic-3.png" alt="contest-types">
+        <img src="assets/images/pages/graphic-3.webp" alt="contest-types">
         <div class="blog-content">
           <h3>
             <a href="#">Kontest turlari haqida</a>
