--- a/src/app/modules/problems/pages/problems/sections/section-topics/section-topics.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-topics/section-topics.component.html
@@ -16,7 +16,7 @@
           container="body"
           ngbTooltip="{{ 'Best' | translate }}">
           <div class="icon">
-            <img alt="topic-best" loading="lazy" src="assets/images/problems/topics/topic-best.png">
+            <img alt="topic-best" loading="lazy" src="assets/images/problems/topics/topic-best.webp">
           </div>
         </div>
       </div>
@@ -30,7 +30,7 @@
           container="body"
           ngbTooltip="{{ 'Coding' | translate }}">
           <div class="icon">
-            <img alt="topic-coding" loading="lazy" src="assets/images/problems/topics/topic-coding.png">
+            <img alt="topic-coding" loading="lazy" src="assets/images/problems/topics/topic-coding.webp">
           </div>
         </div>
       </div>
@@ -44,7 +44,7 @@
           container="body"
           ngbTooltip="{{ 'Python Tricks' | translate }}">
           <div class="icon">
-            <img alt="topic-python-tricks" loading="lazy" src="assets/images/problems/topics/topic-python-tricks.png">
+            <img alt="topic-python-tricks" loading="lazy" src="assets/images/problems/topics/topic-python-tricks.webp">
           </div>
         </div>
       </div>
@@ -58,7 +58,7 @@
           container="body"
           ngbTooltip="{{ 'Bash' | translate }}">
           <div class="icon">
-            <img alt="topic-bash" loading="lazy" src="assets/images/problems/topics/topic-bash.png">
+            <img alt="topic-bash" loading="lazy" src="assets/images/problems/topics/topic-bash.webp">
           </div>
         </div>
       </div>
@@ -72,7 +72,7 @@
           container="body"
           ngbTooltip="{{ 'Database' | translate }}">
           <div class="icon">
-            <img alt="topic-database" loading="lazy" src="assets/images/problems/topics/topic-database.png">
+            <img alt="topic-database" loading="lazy" src="assets/images/problems/topics/topic-database.webp">
           </div>
         </div>
       </div>
@@ -86,7 +86,7 @@
           container="body"
           ngbTooltip="{{ 'Math' | translate }}">
           <div class="icon">
-            <img alt="topic-math" loading="lazy" src="assets/images/problems/topics/topic-math.png">
+            <img alt="topic-math" loading="lazy" src="assets/images/problems/topics/topic-math.webp">
           </div>
         </div>
       </div>
@@ -100,7 +100,7 @@
           container="body"
           ngbTooltip="{{ 'IQ' | translate }}">
           <div class="icon">
-            <img alt="topic-iq" loading="lazy" src="assets/images/problems/topics/topic-iq.png">
+            <img alt="topic-iq" loading="lazy" src="assets/images/problems/topics/topic-iq.webp">
           </div>
         </div>
       </div>
