--- a/src/app/modules/projects/projects.component.html
+++ b/src/app/modules/projects/projects.component.html
@@ -17,14 +17,14 @@
             <div class="row">
               <div [@fadeInLeftOnEnter] class="col-6">
                 <a routerLink="">
-                  <img class="info-img" src="assets/images/pages/graphic-2.png" alt="">
+                  <img class="info-img" src="assets/images/pages/graphic-2.webp" alt="">
                   <h4 class="mt-2 text-white">Loyihalar bo'limi haqida</h4>
                 </a>
               </div>
     
               <div [@fadeInRightOnEnter] class="col-6">
                 <a routerLink="">
-                  <img class="info-img" src="assets/images/pages/graphic-3.png" alt="">
+                  <img class="info-img" src="assets/images/pages/graphic-3.webp" alt="">
                   <h4 class="mt-2 text-white">Loyiha turlari haqida</h4>
                 </a>
               </div>
