--- a/src/app/modules/arena/pages/arena/arena.component.html
+++ b/src/app/modules/arena/pages/arena/arena.component.html
@@ -22,7 +22,7 @@
                   </div>
                 </div>
                 <div class="info-img">
-                  <img src="assets/images/pages/graphic-5.png" alt="info-img">
+                  <img src="assets/images/pages/graphic-5.webp" alt="info-img">
                 </div>
               </a>
             </div>
@@ -35,7 +35,7 @@
                   </div>
                 </div>
                 <div class="info-img">
-                  <img src="assets/images/pages/graphic-1.png" alt="info-img">
+                  <img src="assets/images/pages/graphic-1.webp" alt="info-img">
                 </div>
               </a>
             </div>
