--- a/src/app/modules/contests/pages/contests/contests.component.html
+++ b/src/app/modules/contests/pages/contests/contests.component.html
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="info-img">
-            <img alt="info-img" src="assets/images/pages/graphic-3.png">
+            <img alt="info-img" src="assets/images/pages/graphic-3.webp">
           </div>
         </a>
       </div>
@@ -49,7 +49,7 @@
             </div>
           </div>
           <div class="info-img">
-            <img alt="info-img" src="assets/images/pages/graphic-2.png">
+            <img alt="info-img" src="assets/images/pages/graphic-2.webp">
           </div>
         </a>
       </div>
