--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="info-img">
-            <img width="120" height="120" loading="lazy" src="assets/images/pages/graphic-3.webp" alt="info-img">
+            <img width="120" height="120" rel="preload" src="assets/images/pages/graphic-3.webp" alt="info-img">
           </div>
         </a>
       </div>
@@ -49,7 +49,7 @@
             </div>
           </div>
           <div class="info-img">
-            <img width="120" height="120" loading="lazy" src="assets/images/pages/graphic-2.webp" alt="info-img">
+            <img width="120" height="120" rel="preload" src="assets/images/pages/graphic-2.webp" alt="info-img">
           </div>
         </a>
       </div>
