--- a/src/app/modules/problems/pages/problems/problems.component.html
+++ b/src/app/modules/problems/pages/problems/problems.component.html
@@ -5,13 +5,14 @@
         <section-info></section-info>
       </div>
       <div class="col-lg-10 col-12 offset-0 offset-lg-1">
-        @defer (on viewport){
-          <section-study-plans></section-study-plans>
-        } @placeholder {
-          <div class="card" [style.height.px]="400">
-            <spinner></spinner>
-          </div>
-        }
+<!--        @defer (on viewport){-->
+<!--          <section-study-plans></section-study-plans>-->
+<!--        } @placeholder {-->
+<!--          <div class="card" [style.height.px]="400">-->
+<!--            <spinner></spinner>-->
+<!--          </div>-->
+<!--        }-->
+
         @defer (on viewport){
           <section-topics></section-topics>
         } @placeholder {
