--- a/src/app/layout/horizontal/horizontal-layout.component.html
+++ b/src/app/layout/horizontal/horizontal-layout.component.html
@@ -26,11 +26,7 @@
 <ng-template #navbar>
   <app-navbar
     *ngIf="!coreConfig.layout.navbar.hidden"
-    [ngClass]="
-      coreConfig.layout.navbar.customBackgroundColor === true
-        ? coreConfig.layout.navbar.background + ' ' + coreConfig.layout.navbar.backgroundColor
-        : coreConfig.layout.navbar.background
-    "
+    [class]="coreConfig.layout.navbar.background"
     class="header-navbar horizontal-header-navbar navbar-expand-lg navbar navbar-fixed align-items-center navbar-shadow navbar-brand-center"
   >
   </app-navbar>
@@ -43,14 +39,9 @@
     <!-- Horizontal menu: Visible above large screen only  -->
     <app-menu
       menuType="horizontal-menu"
-      [ngClass]="[
-        coreConfig.layout.navbar.customBackgroundColor === true
-          ? coreConfig.layout.navbar.background +
-            ' ' +
-            coreConfig.layout.navbar.type +
-            ' ' +
-            coreConfig.layout.navbar.backgroundColor
-          : coreConfig.layout.navbar.background + ' ' + coreConfig.layout.navbar.type,
+      [class]="[
+        coreConfig.layout.navbar.background,
+        coreConfig.layout.navbar.type,
         coreConfig.layout.navbar.type === 'floating-nav' ? 'container-xxl' : ''
       ]"
       class="header-navbar navbar-expand-sm navbar navbar-horizontal navbar-shadow menu-border d-none d-xl-block"
@@ -77,15 +68,7 @@
   <footer
     *ngIf="!coreConfig.layout.footer.hidden"
     class="footer"
-    [ngClass]="
-      coreConfig.layout.footer.customBackgroundColor === true
-        ? coreConfig.layout.footer.background +
-          ' ' +
-          coreConfig.layout.footer.type +
-          ' ' +
-          coreConfig.layout.footer.backgroundColor
-        : coreConfig.layout.footer.background + ' ' + coreConfig.layout.footer.type
-    "
+    [class]="[coreConfig.layout.footer.background, coreConfig.layout.footer.type]"
   ></footer>
 </ng-template>
 <!-- / FOOTER -->
