--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     <li class="nav-item">
       <a class="navbar-brand" [routerLink]="['/']">
         <span class="brand-logo">
-          <img src="assets/images/logo/logo.png" alt="brand-logo" height="24" width="36" />
+          <img src="assets/images/logo/logo.webp" alt="brand-logo" height="24" width="36" />
         </span>
         <h2 class="brand-text mb-0">{{ coreConfig.app.appName }}</h2>
       </a>
@@ -16,7 +16,7 @@
 <div class="navbar-container d-flex content">
   <div class="bookmark-wrapper d-flex align-items-center">
     <!-- Menu Toggler | Menu icon will be hidden in case of layout without menu -->
-    <ul class="nav navbar-nav d-xl-none" *ngIf="!coreConfig.layout.menu.hidden">
+    <ul class="nav navbar-nav d-xl-none align-items-center" *ngIf="!coreConfig.layout.menu.hidden">
       <li class="nav-item">
         <a class="nav-link menu-toggle" (click)="toggleSidebar('menu')">
           <kep-icon name="element-11" type="duotone" class="font-large-1"></kep-icon>
@@ -47,7 +47,7 @@
     <!--/ Toggle skin -->
   </div>
   <ul class="nav navbar-nav align-items-center ml-auto">
-    <li ngbDropdown class="nav-item dropdown dropdown-language">
+    <li ngbDropdown class="nav-item dropdown dropdown-language mr-lg-0 mr-50">
       <div class="nav-link dropdown-toggle cursor-pointer" id="dropdown-flag" ngbDropdownToggle>
         <i class="fi fi-{{ languageOptions[_translateService.currentLang].flag }}"></i>
 <!--        <span class="ml-50 selected-language">{{ languageOptions[_translateService.currentLang].title }}</span>-->
