--- a/src/app/layout/components/menu/vertical-menu/vertical-menu.component.html
+++ b/src/app/layout/components/menu/vertical-menu/vertical-menu.component.html
@@ -5,7 +5,7 @@
       <!-- App Branding -->
       <a class="navbar-brand" [routerLink]="['/']">
         <span class="brand-logo">
-          <img src="assets/images/logo/logo.png" alt="brand-logo" width="36" height="24" />
+          <img src="assets/images/logo/logo.webp" alt="brand-logo" width="36" height="24" />
         </span>
         <h2 class="brand-text mb-0">{{ coreConfig.app.appTitle }}</h2>
       </a>
