--- a/src/core/components/core-menu/horizontal/collapsible/collapsible.component.html
+++ b/src/core/components/core-menu/horizontal/collapsible/collapsible.component.html
@@ -1,13 +1,12 @@
 <ng-container *ngIf="!item.hidden">
   <!-- collapsible title -->
-  <a
-    class="d-flex align-items-center"
-    [ngClass]="item.classes"
-    [ngClass]="item.type == 'section' ? 'dropdown-toggle nav-link' : 'dropdown-item dropdown-toggle'"
+  <div
+    class="d-flex align-items-center cursor-pointer"
+    [ngClass]="[item.type == 'section' ? 'dropdown-toggle nav-link' : 'dropdown-item dropdown-toggle']"
     *ngIf="!item.url"
   >
     <ng-container *ngTemplateOutlet="itemContent"></ng-container>
-  </a>
+  </div>
 
   <!-- itemContent template -->
   <ng-template #itemContent>
