--- a/src/core/scss/base/components.scss
+++ b/src/core/scss/base/components.scss
@@ -16,17 +16,17 @@
 // Components
 // ------------------------------
 @import 'components/avatar';
-@import 'components/search';
+// @import 'components/search';
 // @import 'components/chart';
 @import 'components/bootstrap-social';
-@import 'components/demo'; //! Plugins demo styles, remove in real project
-@import 'components/customizer'; //! Customizer demo, remove in real project
+// @import 'components/demo'; //! Plugins demo styles, remove in real project
+// @import 'components/customizer'; //! Customizer demo, remove in real project
 @import 'components/divider';
-@import 'components/timeline';
+// @import 'components/timeline';
 
 // Plugins
 // ------------------------------
 @import 'plugins/ui/breakpoints';
-@import 'plugins/forms/select2/select2';
-@import 'plugins/tables/datatables';
+// @import 'plugins/forms/select2/select2';
+// @import 'plugins/tables/datatables';
 @import 'plugins/forms/form-number-input'; // ? globally required for cart dropdown
