--- a/src/core/scss/base/components/_include.scss
+++ b/src/core/scss/base/components/_include.scss
@@ -1,5 +1,5 @@
 
 // Overrides user variable
-@import 'scss/variables/_variables-components'; // Component custom variable override (for user purpose)
+// @import 'scss/variables/_variables-components'; // Component custom variable override (for user purpose)
 @import 'variables'; // Component variable
 @import 'variables-dark'; // Dark variable
