--- a/src/core/scss/core.scss
+++ b/src/core/scss/core.scss
@@ -7,10 +7,10 @@
 @import './base/colors';
 @import './base/components';
 @import './base/themes/dark-layout';
-@import './base/themes/bordered-layout';
-@import './base/themes/semi-dark-layout';
+// @import './base/themes/bordered-layout';
+// @import './base/themes/semi-dark-layout';
 @import './base/core/colors/palette-gradient';
-@import './base/plugins/forms/form-validation'; // Added for form validation style support
+// @import './base/plugins/forms/form-validation'; // Added for form validation style support
 
 // Vue Specific
 @import './angular/index';
