--- a/src/app/modules/home/calendar-section/calendar-section.component.scss
+++ b/src/app/modules/home/calendar-section/calendar-section.component.scss
@@ -47,3 +47,90 @@ app-calendar-main-sidebar {
 .fc-scrollgrid-section-liquid {
   height: 1px !important;
 }
+
+.dark-layout {
+  // calendar
+  .app-calendar {
+    .app-calendar-sidebar {
+      background-color: $theme-dark-card-bg;
+      border-color: $theme-dark-border-color;
+
+      .sidebar-content-title {
+        color: $theme-dark-label-color;
+      }
+      .select-all,
+      .input-filter {
+        ~ label {
+          color: $theme-dark-label-color;
+        }
+      }
+    }
+    .fc {
+      .fc-day-today {
+        background: $theme-dark-body-bg !important;
+        background-color: $theme-dark-body-bg !important;
+      }
+
+      .fc-timegrid {
+        .fc-scrollgrid-section {
+          .fc-col-header-cell,
+          .fc-timegrid-axis,
+          .fc-daygrid-day {
+            background-color: $theme-dark-card-bg;
+            border-color: $theme-dark-border-color;
+          }
+          .fc-day-today {
+            background-color: rgba($color: $gray-100, $alpha: 0.12) !important;
+
+            &.fc-col-header-cell {
+              background-color: $theme-dark-card-bg !important;
+            }
+          }
+        }
+      }
+      .fc-popover {
+        background: $theme-dark-card-bg;
+        border-color: $theme-dark-border-color;
+      }
+      .fc-popover-header {
+        .fc-popover-title,
+        .fc-popover-close {
+          color: $theme-dark-body-color;
+        }
+      }
+      tbody td,
+      thead th {
+        border-color: $theme-dark-border-color;
+      }
+
+      .fc-scrollgrid {
+        border-color: $theme-dark-border-color;
+      }
+
+      .fc-list,
+      th {
+        border-color: $theme-dark-border-color;
+        .fc-list-day-cushion {
+          background: $theme-dark-body-bg;
+        }
+        .fc-list-event:hover td {
+          background-color: $theme-dark-body-bg;
+        }
+        .fc-list-event-time {
+          color: $theme-dark-body-color;
+        }
+        .fc-list-event {
+          td {
+            border-color: $theme-dark-border-color;
+          }
+        }
+      }
+    }
+
+    .fc-timegrid-event-harness-inset .fc-timegrid-event,
+    .fc-timegrid-event.fc-event-mirror,
+    .fc-timegrid-more-link {
+      box-shadow: 0 0 0 1px $theme-dark-border-color;
+    }
+  }
+}
