--- a/src/core/components/core-menu/horizontal/collapsible/collapsible.component.html
+++ b/src/core/components/core-menu/horizontal/collapsible/collapsible.component.html
@@ -12,7 +12,7 @@
   <ng-template #itemContent>
     <kep-icon class="font-medium-4 mr-50 text-primary" type="duotone" [name]="item.icon"></kep-icon>
     <span>{{ item.translate | translate }}</span>
-    <span *ngIf="item.hasNewEvent" class="badge ml-25 badge-yellow badge-pill badge-glow">New</span>
+    <span *ngIf="item.id == 'competitions'" class="badge ml-25 badge-yellow badge-pill badge-glow">New</span>
   </ng-template>
 
   <!-- sub-menu item/collapsible -->
