--- a/src/app/shared/components/user-popover/user-popover/user-popover.component.html
+++ b/src/app/shared/components/user-popover/user-popover/user-popover.component.html
@@ -18,7 +18,7 @@
           <ng-template #tipContent>
             <img src="assets/images/icons/fire_red.png" height="19" alt=""> {{ user.streak }}
           </ng-template>
-          <span class="badge badge-pill badge-kep" [ngbTooltip]="tipContent">CPython</span>
+          <span class="badge badge-pill badge-kep" [ngbTooltip]="tipContent">KEP</span>
         </span>
       </h3>
       <h6 class="text-muted">{{ user.username }}</h6>
