--- a/src/app/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.html
+++ b/src/app/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.html
@@ -1,18 +1,7 @@
 <li ngbDropdown class="nav-item mr-25">
-  <a class="nav-link text-dark d-flex align-items-center" ngbDropdownToggle id="navbarDailyTasksDropdown" (click)="loadData()">
-    @if (streak == 0){
-      @if (maxStreak == 0){
-        <img height="20" class="mr-50" src="assets/images/icons/fire-1.webp">
-      } @else {
-        <img height="20" class="mr-50" src="assets/images/icons/fire-2.webp">
-      }
-    } @else if(streak < 7){
-      <img height="20" class="mr-50" src="assets/images/icons/fire-3.webp">
-    } @else {
-      <img height="20" class="mr-50" src="assets/images/icons/fire-4.webp">
-    }
-    {{ streak }}
-  </a>
+  <div class="nav-link text-dark d-flex align-items-center cursor-pointer" ngbDropdownToggle id="navbarDailyTasksDropdown" (click)="loadData()">
+    <streak [streak]="streak" [maxStreak]="maxStreak"></streak>
+  </div>
   <ul ngbDropdownMenu aria-labelledby="navbarDailyTasksDropdown"
     class="dropdown-menu bg-daily-tasks dropdown-menu-media dropdown-menu-right">
     <!-- DailyTasks header -->
