--- a/src/core/scss/base/components.scss
+++ b/src/core/scss/base/components.scss
@@ -22,7 +22,7 @@
 // @import 'components/demo'; //! Plugins demo styles, remove in real project
 // @import 'components/customizer'; //! Customizer demo, remove in real project
 @import 'components/divider';
-// @import 'components/timeline';
+@import 'components/timeline';
 
 // Plugins
 // ------------------------------
