--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,3 +1,48 @@
+<!--<ul class="lightrope">-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--  <li></li>-->
+<!--</ul>-->
+
 @defer (when coreConfig.layout.type === 'vertical') {
   @if (coreConfig.layout.type === 'vertical'){
     <vertical-layout></vertical-layout>
