--- a/src/app/modules/problems/components/problems-activity-card/problems-activity-card.component.html
+++ b/src/app/modules/problems/components/problems-activity-card/problems-activity-card.component.html
@@ -1,6 +1,8 @@
 <div class="card">
   @if (isLoading) {
-    <spinner height="200px"></spinner>
+    <div [style.height.px]="200">
+      <spinner></spinner>
+    </div>
   } @else {
     <div class="card-header">
       <div class="card-title">
