--- a/src/app/shared/third-part-modules/apex-chart/apex-chart.component.html
+++ b/src/app/shared/third-part-modules/apex-chart/apex-chart.component.html
@@ -14,5 +14,6 @@
   [title]="options.title"
   [plotOptions]="options.plotOptions"
   [labels]="options.labels"
+  [legend]="options.legend"
   [theme]="chartTheme"
 ></apx-chart>
