--- a/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.html
+++ b/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.html
@@ -141,9 +141,7 @@
                     'text-success': result == 2,
                     'text-secondary': result == 1,
                     'text-danger': result == 0
-                  }">
-                    {{ result }}
-                  </span>
+                  }">{{ result }}</span>
                   </td>
                   <td class="text-center">
                   <span class="badge-glow badge-warning badge">
