--- a/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.scss
+++ b/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.scss
@@ -49,7 +49,9 @@
 }
 
 .player-results span {
-  font-family: Roboto !important;
+  font-family: Inconsolata, serif !important;
+  margin-right: 0.25rem;
+  display: inline-block;
 }
 
 
