--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,28 +1,9 @@
-<!--<ul class="lightrope">-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--  <li></li>-->
-<!--</ul>-->
+<ul class="lightrope">
+  @for (_ of [].constructor(lightsCount); track _){
+    <li></li>
+  }
+</ul>
+
 
 @defer (when coreConfig.layout.type === 'vertical') {
   @if (coreConfig.layout.type === 'vertical'){
