--- a/src/app/modules/problems/components/problem-body/problem1624/problem1624.component.html
+++ b/src/app/modules/problems/components/problem-body/problem1624/problem1624.component.html
@@ -1,1 +1,4 @@
-<img class="text-center" width="300" src="https://images.news18.com/ibnlive/uploads/2021/12/spiderman-meme-16401651614x3.png" alt="ugly">
+<img
+  alt="ugly"
+  class="text-center"
+  src="https://images.news18.com/ibnlive/uploads/2021/12/spiderman-meme-16401651614x3.png" width="300">
