--- a/src/app/modules/problems/components/problem-body/problem1630/problem1630.component.html
+++ b/src/app/modules/problems/components/problem-body/problem1630/problem1630.component.html
@@ -1,3 +1,8 @@
-<span (mouseenter)="changePosition()" [style.top.px]="top" [style.left.px]="left" class="badge badge-primary badge-glow" [ngbTooltip]="msg">
+<span
+  (mouseenter)="changePosition()"
+  [ngbTooltip]="msg"
+  [style.left.px]="left"
+  [style.top.px]="top"
+  class="badge badge-primary badge-glow">
   Hover
 </span>
