--- a/src/app/modules/problems/components/problem-body/problem1631/problem1631.component.html
+++ b/src/app/modules/problems/components/problem-body/problem1631/problem1631.component.html
@@ -1,8 +1,8 @@
 <button
-    #mustbeclicked
-    id="mustbeclicked"
-    class="btn btn-relief-primary"
-    disabled
-    (click)="onClick()">
-    Click
+  #mustbeclicked
+  (click)="onClick()"
+  class="btn btn-relief-primary"
+  disabled
+  id="mustbeclicked">
+  Click
 </button>
