--- a/src/app/modules/problems/components/problem-body/problem1634/problem1634.component.html
+++ b/src/app/modules/problems/components/problem-body/problem1634/problem1634.component.html
@@ -1,3 +1,3 @@
-<video width="350" controls>
-    <source src="assets/video/1634.mp4" type="video/mp4">
+<video controls width="350">
+  <source src="assets/video/1634.mp4" type="video/mp4">
 </video>
