--- a/src/app/modules/problems/components/problem-body/problem1733/problem1733.component.html
+++ b/src/app/modules/problems/components/problem-body/problem1733/problem1733.component.html
@@ -1,31 +1,32 @@
-
 <ngx-monaco-editor
+  (ngModelChange)="change()"
+  [(ngModel)]="html"
   [ngModelOptions]="{standalone: true}"
   [options]="editorOptions"
-  [(ngModel)]="html"
-  (ngModelChange)="change()"
-  name="code"
   class="mt-1"
-  style="height: 400px; width: 100%;" ngDefaultControl></ngx-monaco-editor>
+  name="code"
+  ngDefaultControl style="height: 400px; width: 100%;"></ngx-monaco-editor>
 
 <div class="row">
   <div class="col-lg-6 col-12">
     <h4>Output</h4>
-    <div (mouseenter)="mouseEnter=true;" (mouseleave)="mouseEnter=false;" style="width: 300px; height: 300px; position: relative; cursor: col-resize;">
+    <div (mouseenter)="mouseEnter=true;" (mouseleave)="mouseEnter=false;"
+         style="width: 300px; height: 300px; position: relative; cursor: col-resize;">
       <div
-        #output
-        [ngStyle]="{
+          #output
+          [ngStyle]="{
             'width': outputWidth + '%',
             'box-shadow': mouseEnter ? 'red 1px 0px 0px' : 'none'
         }"
-        style="background: #fff; overflow: hidden; position: relative; z-index: 1; mix-blend-mode: normal; pointer-events: none;">
-        <iframe [srcdoc]="outputHtml | safe" style="width: 300px; height: 300px; border: 0px; outline: 0px;" title="Preview"
-          sandbox="allow-same-origin">
+          style="background: #fff; overflow: hidden; position: relative; z-index: 1; mix-blend-mode: normal; pointer-events: none;">
+        <iframe [srcdoc]="outputHtml | safe" sandbox="allow-same-origin"
+                style="width: 300px; height: 300px; border: 0px; outline: 0px;"
+                title="Preview">
         </iframe>
       </div>
       <img alt=""
-        src="{{ problem.image }}"
-        style="position: absolute; top: 0px; left: 0px; height: 100%; width: 100%;">
+           src="{{ problem.image }}"
+           style="position: absolute; top: 0px; left: 0px; height: 100%; width: 100%;">
     </div>
   </div>
 
@@ -33,6 +34,6 @@
     <h4>
       Target
     </h4>
-    <img src="{{ problem.image }}" height="300" width="300" alt="card">
+    <img alt="card" height="300" src="{{ problem.image }}" width="300">
   </div>
 </div>
